--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         </activity>
         <activity android:name=".PreviewActivity"
                   android:parentActivityName=".MainActivity"
-                  android:label="プレビュー">
+                  android:label="my diary">
         </activity>
         <activity
                 android:name=".MainActivity"
