--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="jp.rie.ijichi.dialyapp">
+          package="jp.rie.ijichi.diary">
 
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
@@ -14,17 +14,17 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
+        <activity android:name="jp.rie.ijichi.diary.LoginActivity">
         </activity>
-        <activity android:name=".EditActivity">
+        <activity android:name="jp.rie.ijichi.diary.EditActivity">
         </activity>
         <activity
-                android:name=".PreviewActivity"
+                android:name="jp.rie.ijichi.diary.PreviewActivity"
                 android:label="my diary"
-                android:parentActivityName=".MainActivity">
+                android:parentActivityName="jp.rie.ijichi.diary.MainActivity">
         </activity>
         <activity
-                android:name=".MainActivity"
+                android:name="jp.rie.ijichi.diary.MainActivity"
                 android:label="@string/app_name"
                 android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
